<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" 
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	<TextView  
		android:layout_width="match_parent"
		android:layout_height="wrap_content" 
		android:layout_marginTop="3dp"
		android:text="@string/id" />			
	<EditText android:id="@+id/etId" 
		android:layout_width="match_parent" 
		android:layout_height="wrap_content" 
		android:layout_marginLeft="3dp" 
		android:text="@string/default_id" />	
		
	<TextView 
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:layout_marginTop="3dp"
		android:text="@string/name" />
	<EditText android:id="@+id/etName" 
		android:layout_width="match_parent" 
		android:layout_height="wrap_content" 
		android:text="@string/default_name" />

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:layout_marginTop="3dp"
		android:text="@string/phoneNo" />
	<EditText android:id="@+id/etPhoneNo" 
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:inputType="phone" 
		android:text="@string/default_phoneNo" />

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:layout_marginTop="3dp"
		android:text="@string/address" />
	<EditText android:id="@+id/etAddress" 
		android:layout_width="match_parent"
		android:layout_height="wrap_content" 
		android:text="@string/default_address" />
			
	<LinearLayout 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content" 
		android:layout_marginTop="3dp" >				
		<Button android:id="@+id/btnInsert" 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/insert" />
		<Button android:id="@+id/btnClear" 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/clear" />			
	</LinearLayout>	
</LinearLayout>
